# RType

./: CMakeLists.txt  HowToAddCharacter.md  HowToAddEnemy.md  Readme.md
.github/workflows/: linter.yml  release.yml
Client/: CMakeLists.txt  index.cpp
Client/Plugins/: CMakeLists.txt
Client/Plugins/Animation/: Animation.cpp  Animation.hpp  CMakeLists.txt
Client/Plugins/EntitiesHandler/: CMakeLists.txt  EntitiesHandler.cpp  EntitiesHandler.hpp
Client/Plugins/Explosion/: CMakeLists.txt  Explosion.cpp  Explosion.hpp
Client/Plugins/Parallax/: CMakeLists.txt  Parallax.cpp  Parallax.hpp
Client/Plugins/PlayerController/: CMakeLists.txt  PlayerController.cpp  PlayerController.hpp
Json/Client/: project.json
Json/Client/Entities/: BasicEnemy.json  BasicProjectile.json  BigProjectile.json  Boss1.json  CharacterA.json  CharacterB.json  CharacterC.json  DirectionalProjectile.json  Explosion.json  Kamikaze.json  Sniper.json  Tank.json
Json/Client/Scene/: test.json
Json/Server/: project.json
Json/Server/Scene/: mainScene.json
Json/Server/Scene/Character/: CharacterA.json  CharacterB.json  CharacterC.json
Json/Server/Scene/Enemies/: Boss1.json  Kamikaze.json  Sniper.json  Tank.json  basicEnemy.json
Json/Server/Scene/Projectile/: BasicProjectile.json  BasicProjectileAlly.json  BigProjectile.json  BigProjectileAlly.json  DirectionalProjectile.json  DirectionalProjectileAlly.json
Libs/: CMakeLists.txt
Libs/Uniti/: CMakeLists.txt
Server/: CMakeLists.txt  index.cpp
Server/Plugins/: CMakeLists.txt
Server/Plugins/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntryPoint.cpp
Server/Plugins/Projectile/: CMakeLists.txt  Projectile.cpp  Projectile.hpp
Server/Plugins/UserController/: CMakeLists.txt  UserController.cpp  UserController.hpp
Server/Plugins/WaveSpawn/: CMakeLists.txt  WaveSpawn.cpp  WaveSpawn.hpp
